# dynagann

./: CMakeLists.txt  README.md  benchmarks.txt  dynagann-windows.txt
libraries/linux/cppformat-2.1.0/: cppformat-targets.cmake
libraries/linux/par/test/: CMakeCache.txt  Makefile  cache_table  cmake_install.cmake  test_bluenoise  test_bubbles  test_cpp  test_filecache  test_filecache_lz4  test_linkage  test_msquares  test_shapes  test_sprune
src/: gann_physics.h  gl_error.cpp  main.cpp  mesh.cpp  mesh.h  ogl_text.cpp  ogl_text.h  par_shapes.cpp  physics.cpp  physics.h  shader.cpp  shader.h  utils.cpp  utils.h
src/shaders/: basic_lighting.frag  basic_lighting.vert  phong.frag  phong.vert  shadow.frag  shadow.vert  text.frag  text_background.frag  tom.frag
